mule-user-guide/v/3.4/creating-a-custom-xml-namespace.adoc
= 创建一个自定义XML命名空间
:keywords: xml namespace, schema, customize

每个模块都使用XML模式定义来定义模块提供给Mule ESB的对象和属性。这些配置元素是使用每个模块的名称空间引入的，并将名称空间与模式关联起来。本页描述了如何在Mule中处理配置，以及在Mule中编写新模块或传输时需要执行哪些步骤。

== 使用命名空间的优势

命名空间的使用提供了以下优点：

* 从XML中删除类名，以便隐藏实现细节。

* 模块引入的所有对象都是由命名空间自包含的。

* 模式为模块提供特定于域的语言（DSL），其中所有对象和属性都在具有类型验证的模式中描述。

* 架构可以为类型，值范围和所需属性提供额外的验证。

== 使用模块模式

架构位于每个包的`main/resources/META-INF`目录中。核心模式位于`mule-core`包中，TCP模式位于`tcp`包中，依此类推。

Mule模式可以直接使用或嵌入到Spring中。另外，Spring beans可以直接在Mule模式中创建（只需使用`<spring:bean .../>`），其他名称空间的元素可以放置在`<other>...</other>`中。

===  Mule命名空间

注意：从Mule 3.0开始，版本不再是命名空间声明的一部分。此外，所有架构和xml配置文件中的"mulesource"都将替换为"mulesoft"。

Mule xml配置文件的默认命名空间是`mule`：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xmlns:spring="http://www.springframework.org/schema/beans"
    xsi:schemaLocation="
       http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
       http://www.mulesoft.org/schema/mule/core/3.0 META-INF/mule.xsd">
  <!-- Mule config here -->
  <spring:bean ...you can also embed Spring bean definitions directly.../>
 
  <spring:beans>
    <!-- and you can have nested spring definitions -->
  </spring:beans>
</mule>
----

注意这里声明了一个`spring`名字空间，所以我们可以直接在你的Mule配置文件中嵌入spring beans。

=== 关于混合骡子和春天的更多信息

Mule模式包括通过在`<mule>`中包含`<spring:bean>`在某些点使用Spring元素的功能。这些元素由Mule代码明确处理，它们将处理委托给Spring。

在自己的模式中使用Spring元素时要小心，并检查它们是否按预期行事。 `<bean>`和`<beans>`元素都被转发给Spring进行处理。另外，可以使用预定义的`mule:mapType`，并且在与`ChildMapDefinitionParser`关联时，将自动使用Spring的`<entry>`元素构建地图（这是*only*方式， {6}}可以直接在Mule元素中使用）。有关示例，请参阅Mule模式中`mapType`的使用。类似`ChildPropertiesDefinitionParser`的行为也应该是可能的（但ChildMap_Entry_和ChildList_Entry_DefinitionParsers与Spring无关）。

其他名称空间可以通过`<spring:beans>`或通过在模块中添加专用元素来引入（请参阅 link:/mule-user-guide/v/3.6/scripting-module-reference[脚本模块的] `<lang>`元素）。

=== 文档

您可以使用`<xsd:annotation>`和`<xsd:documentation>`标记向模式添加文档：

[source, xml, linenums]
----
<xsd:element name="my-element" type="myType">
  <xsd:annotation>
    <xsd:documentation>This element does this</xsd:documentation>
  </xsd:annotation>
</xsd:element>
<xsd:complexType name="myType">
  <xsd:annotation>
    <xsd:documentation>This type does that</xsd:documentation>
  </xsd:annotation>
</xsd:complexType>
----

虽然可以在模式中的不同位置添加文档，但使用此信息的工具遵循某些约定（请参见下文）。因此，嵌入式文档应该：

* 置于元素，属性或关联类型中

* 避免重复元素和类型中的信息

* 避免引用元素（`<xsd:element ref="..."/>`）

* 使每个级别的文档正确和独特（不要依赖继承，但尽量避免重复）

====  IntelliJ Idea

想法将显示为元素或属性定义的文档，或者为缺少相关类型的文档。当用户按Ctrl-J时显示信息。有关更多信息，请参阅 http://rossmason.blogspot.com/2008/06/mule-and-intellij-idea.html[这篇文章介绍了如何在IntelliJ中使用Mule模式]。

==== 的Eclipse

Web Tools Platform（WTP）XML编辑器显示为元素或属性定义的文档，或者为缺失相关类型的文档。当您选择元素或属性或使光标位于其上时，按F2键时会显示信息。通过按"CTRL-."组合键使用上下文相关的自动完成功能时，也会显示相同的信息。

WTP XML编辑器将显示"inherited"文档，但不会显示与引用的全局元素相关的文档。

== 编写配置处理程序

在编写模块的新Mule传输时，您需要编写一个模式定义和解析XML所需的代码，但大部分工作都是为您完成的。以下部分将介绍以下过程：

* 定义XML _Schema_：描述模块公开的所有对象，例如变换器，组件，过滤器，路由器，代理等。

* 编写_Namespace Handler_：负责为您的模式定义的每个元素配置XML解析器。

* 为模式中定义的每个元素（对象）编写_Definition Parser_

* 测试您的命名空间处理程序

=== 定义架构

然而，Mule定义了你需要的大部分开箱即用功能，因此你可以直接跳入并编写自己的代码。以下是几个关键概念：

为模块中的每个对象定义*  _复杂类型_。复杂类型定义组成类型的_elements_和_attributes_。例如，`connectorType`将为所有连接器定义共享属性并定义任何嵌套元素，例如`<service-overrides>`。
+
[source, xml, linenums]
----
<xsd:complexType name="connectorType" mixed="true">
        <xsd:choice minOccurs="0" maxOccurs="unbounded">
            <xsd:element name="receiver-threading-profile" type="threadingProfileType" minOccurs="0"
                         maxOccurs="1"/>
            <xsd:element name="dispatcher-threading-profile" type="threadingProfileType" minOccurs="0"
                         maxOccurs="1"/>
            <xsd:group ref="exceptionStrategies" minOccurs="0" maxOccurs="1"/>
            <xsd:element name="service-overrides" type="serviceOverridesType" minOccurs="0" maxOccurs="1"/>
        </xsd:choice>
 
        <xsd:attribute name="name" type="xsd:string" use="required"/>
        <xsd:attribute name="createDispatcherPerRequest" type="xsd:boolean"/>
        <xsd:attribute name="createMultipleTransactedReceivers" type="xsd:boolean"/>
</xsd:complexType>
----

*Note*复杂类型可以扩展（很像继承），所以新的复杂类型可以建立在现有的类型上。 Mule为连接器，代理，变换器和路由器提供了许多基础复杂类型。如果您编写其中之一，您的模式应该扩展相应的复杂类型。以TCP为例，下面是我们定义`noProtocolTcpConnectorType`的摘录：

[source, xml, linenums]
----
<xsd:import namespace="http://www.mulesoft.org/schema/mule/core/3.0"/>
 
<xsd:complexType name="noProtocolTcpConnectorType">
  <xsd:complexContent>
    <xsd:extension base="mule:connectorType">
      <xsd:attribute name="sendBufferSize" type="mule:substitutableInt">
        <xsd:annotation>
          <xsd:documentation>
            The size of the buffer (in bytes) used when sending data, set on the socket itself.
          </xsd:documentation>
        </xsd:annotation>
      </xsd:attribute>
      <xsd:attribute name="receiveBufferSize" type="mule:substitutableInt">
        <xsd:annotation>
          <xsd:documentation>
            The size of the buffer (in bytes) used when receiving data, set on the socket itself.
          </xsd:documentation>
        </xsd:annotation>
      </xsd:attribute>
      ...
      <xsd:attribute name="validateConnections" type="mule:substitutableBoolean">
        <xsd:annotation>
          <xsd:documentation>
            This "blips" the socket, opening and closing it to validate the connection when first accessed.
          </xsd:documentation>
        </xsd:annotation>
      </xsd:attribute>
    </xsd:extension>
  </xsd:complexContent>
</xsd:complexType>
----

这种复杂类型扩展了`mule:connectorType`类型。请注意，我们需要导入Mule核心模式，因为这是`connectorType`的定义。

[NOTE]
====
*Schema Types*

请注意，我们用于int，boolean和所有数字类型的类型都是名为`substitutableInt`或`substitutableBoolean`的自定义类型。这些类型允许`int`值和`boolean`值，但也允许开发人员使用属性占位符（例如`${tcp.keepAlive`}作为属性的有效值。这些占位符将在运行时被属性文件中定义的实际值替换。
====

_Element definitions_描述模式中可用的元素。一个元素有一个_type_，应该声明为_Complex Type_。例如：

[source, xml, linenums]
----
<xsd:element name="connector" type="tcpConnectorType"/>
----

这使得`tcp`名称空间内的`connector`元素可用。

该模式应该被称为`mule-<short module name>.xsd`并存储在模块或传输的META-INF中。

=== 版本

在Mule中，架构的版本保持在架构URI中。这意味着`namespace`和`targetNamespace`隐含地包含模式版本。模式URI使用以下约定：

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/core/3.0
----

URI的第一部分 -  `http://www.mulesoft.org/schema/mule/`  - 对于每个模式都是相同的。接下来是模块的简称，后面是模式的版本。

=== 架构映射

要停止XML解析器从Internet加载Mule模式，您需要添加一个映射文件，将远程模式位置映射到本地类路径位置。此映射是在位于模块/传输的`META-INF`目录中的名为`spring.schemas`的简单属性文件中完成的。

*spring.schemas*

[source, code, linenums]
----
http\://www.mulesoft.org/schema/mule/tcp/3.0/mule-tcp.xsd=META-INF/mule-tcp.xsd
----

=== 命名空间处理程序

命名空间处理程序负责注册定义分析程序，以便在找到配置中的元素时知道使用哪个分析程序来创建相应的对象。

名称空间处理程序是与名称空间URI直接关联的单个类。要进行此关联，需要在模块或传输的`META-INF`目录的根目录中有一个名为`spring.handlers`的文件。该文件包含以下内容：

*spring.handlers*

[source, code, linenums]
----
http\://www.mulesoft.org/schema/mule/tcp/3.0=org.mule.transport.tcp.config.TcpNamespaceHandler
----

`TcpNamespaceHandler`代码非常简单，因为提供了一个基类支持类：

*TcpNamespaceHandler.java*

[source, java, linenums]
----
public class TcpNamespaceHandler extends NamespaceHandlerSupport
{
    public void init()
    {
        registerBeanDefinitionParser("connector", new OrphanDefinitionParser(TcpConnector.class, true));
    }
}
----

在这里，应该有一个或多个注册使用定义解析器来绑定元素名称。

=== 定义解析器

定义解析器是创建实际对象引用的地方。它包含一些Spring特定的类和术语，因此值得阅读 http://spring.io/blog/2006/08/28/creating-a-spring-2-0-namespace-use-spring-s-abstractbeandefintionparser-hierarchy[这个介绍]。

Mule已经包含了大量有用的定义解析器，可以用于大多数情况或扩展以满足您的需求。您还可以创建自定义分析器。下表介绍了现有的解析器。要查看它们的使用方式，请参阅`org.mule.config.spring.handlers.MuleNamespaceHandler`。

[%header,cols="2*"]
|===
| {分析器{1}}说明
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.generic.OrphanDefinitionParser
----
|从元素中构造一个独立的bean。它不会被注入任何其他对象。这个解析器可以配置为自动设置对象的类，init和destroy方法，以及该对象是否为单例。
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.generic.ChildDefinitionParser
----
|创建一个定义解析器，它将构造一个子元素并将其注入到父对象（封闭的XML元素）中。解析器会将XML中定义的所有属性设置为bean属性，并将处理任何嵌套元素作为bean属性，除了将自动查找元素的正确定义解析器。如果类是从属性读取的（当类为null时），它将根据约束进行检查。它必须是约束的子类。
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.generic.ParentDefinitionParser
----
|处理XML中的子属性元素，但设置父对象的属性。当一个对象具有许多属性并且将这些属性拆分为可以表示为XML中的子元素的组时，这是非常有用的。
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.collection.ChildMapEntryDefinitionParser
----
|允许将一系列键值对元素作为Map设置在对象上。不需要定义周围的“地图”元素来包含地图条目。这对于键值对映射很有用。
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.AbstractHierarchicalDefinitionParser
----
|此定义解析器将嵌套XML元素的分层处理概念引入。扩展此类的定义分析器始终是在父定义分析器上设置的子Bean。必须重写一个方法`getPropertyName`，以指定要使用此bean在父bean上设置的属性的名称。请注意，可以根据父元素动态解析属性名称。该实现还支持集合和地图。如果此元素的bean类设置为`MapEntryDefinitionParser.KeyValuePair`，则假定正在处理一个Map并将任何子元素添加到父Map中。
一个|
[source, code, linenums]
----
org.mule.config.spring.parsers.AbstractMuleBeanDefinitionParser
----
一个|
此解析器扩展了Spring提供的`AbstractBeanDefinitionParser`，以提供用于为Mule bean定义解析器始终定制bean表示形式的附加功能。 Mule中的大多数定制bean定义解析器都会使用这个基类。以下是增强功能：

* 可以注册属性映射来控制Mule XML中的属性名称如何映射到正在创建的对象中的bean名称。
* 值映射可用于将XML模式中的选择列表中的键值对映射到正在创建的bean上的属性值。这些是键值对的逗号分隔列表。
* 为此对象提供自动设置`init-method`和`destroy-method`的方法。这会自动将bean连接到应用程序上下文的生命周期中。
*  `singleton`属性提供了确保bean始终是单例的固定方式。

|===

=== 命名约定

定义解析器的数量和种类正在迅速增长。为了使它们更易于管理，请使用以下约定。

* 按功能分组。抽象基地住在`org.mule.config.spring.parsers`。在此之下，我们有`generic`，`specific`和`collection`，这应该是不言自明的。在这些内容中您可能需要添加进一步的分组（例如，`specific.security`）。

* 为创建的对象与周围的上下文的关系使用一致的名称：

**  *Child*对象被注入父项（封闭的DOM元素）

**  *Grandchild*就像孩子一样，但不止一代人递增DOM树

**  *Orphan*个对象独立

将**  *Named*个对象注入名称标识的目标而不是DOM位置。

**  *Parent*定义解析器与外观类似，为父级提供了一个可选接口。

=== 测试

测试命名空间处理程序非常简单。您可以使用Mule XML配置对象，启动服务器并检查值是否已正确设置。例如：

[source, java, linenums]
----
public class TcpNamespaceHandlerTestCase extends FunctionalTestCase
{
    protected String getConfigResources()
    {
        return "tcp-namespace-config.xml";
    }
 
    public void testConfig() throws Exception
    {
        TcpConnector c = (TcpConnector) muleContext.getRegistry().lookupConnector("tcpConnector");
        assertNotNull(c);
        assertEquals(1024, c.getReceiveBufferSize());
        assertEquals(2048, c.getSendBufferSize());
        assertEquals(50, c.getReceiveBacklog());
        assertEquals(3000, c.getReceiveTimeout());
        assertTrue(c.isKeepAlive());
        assertTrue(c.isConnected());
        assertTrue(c.isStarted());
 
    }
}
----

== 扩展现有的处理程序

您可以扩展现有的传输并添加新的属性和元素，而不是创建新的处理程序。例如，SSL传输扩展了TCP传输。

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<xsd:schema xmlns="http://www.mulesoft.org/schema/mule/ssl/2.2"
            xmlns:xsd="http://www.w3.org/2001/XMLSchema"
            xmlns:mule="http://www.mulesoft.org/schema/mule/core/2.2"
            xmlns:tcp="http://www.mulesoft.org/schema/mule/tcp/2.2"
            targetNamespace="http://www.mulesoft.org/schema/mule/ssl/2.2"
            elementFormDefault="qualified"
            attributeFormDefault="unqualified">
 
    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
    <xsd:import namespace="http://www.mulesoft.org/schema/mule/core/2.2"
                schemaLocation="http://www.mulesoft.org/schema/mule/core/2.2/mule.xsd" />
    <xsd:import namespace="http://www.mulesoft.org/schema/mule/tcp/2.2"
                schemaLocation="http://www.mulesoft.org/schema/mule/tcp/2.2/mule-tcp.xsd"/>
 
    <xsd:element name="connector" substitutionGroup="mule:abstract-connector">
        <xsd:annotation>
            <xsd:documentation>
                Connect Mule to an SSL socket, to send or receive data via the network.
            </xsd:documentation>
        </xsd:annotation>
        <xsd:complexType>
            <xsd:complexContent>
                <xsd:extension base="tcp:tcpConnectorType">
                    <xsd:sequence>
                        <xsd:element minOccurs="0" maxOccurs="1" name="client" type="mule:tlsClientKeyStoreType"/>
                        <xsd:element minOccurs="0" maxOccurs="1" name="key-store" type="mule:tlsKeyStoreType"/>
                        <xsd:element minOccurs="0" maxOccurs="1" name="server" type="mule:tlsServerTrustStoreType"/>
                        <xsd:element minOccurs="0" maxOccurs="1" name="protocol-handler" type="mule:tlsProtocolHandler"/>
                    </xsd:sequence>
                </xsd:extension>
            </xsd:complexContent>
        </xsd:complexType>
    </xsd:element>
----

== 简单食谱

对于简单的传输（如UDP），以下配方就足够了。订购有助于保证全面覆盖。

. 编写连接器的测试用例。

. 使用IDE的自动完成来测试每个公共getter（作为公共API的第一个近似值 - 手工整理）。

. 将测试值设置为默认值以外的值。

. 使用test中的属性编写连接器的XML配置（`test/resources/foo-connector-test.xml`）（确保导入部分正确）。

. 编写架构定义（调整直到XML连接器配置显示无错误）（`META-INF/mule-foo.xsd`）。

. 编写名称空间处理程序（以及任何所需的定义解析器）（`src/main/java/org/mule/providers/foo/config/FooNamespaceHandler`）

. 设置Spring处理程序映射（`META-INF/spring.handlers`）。

. 设置本地模式映射（`META-INF/spring.schemas`）。

. 确保测试运行。

. 根据文档检查属性并使其一致（但请注意，诸如连接策略参数之类的内容由嵌入元素处理，该元素本身继承自connectorType），然后重新运行测试。

== 资源

* 给出了一个有用的 link:_attachments/spring-forward-2006-about-jpa.ppt.pdf[PDF幻灯片]集，给出了一个介绍性示例，概述了Spring中的新方法和（幻灯片29）。 Mule代码更复杂，但遵循相同的结构：`org.mule.config.spring.handlers.MuleNamespaceHandler`是命名空间处理程序; `org.mule.config.spring.parsers.AbstractMuleBeanDefinitionParser`和子类是bean定义解析器。

* 有几篇博文（https://decaresystemsblog.wordpress.com/2006/03/29/spring-20-hiding-services-behind-custom-schema-part-i/[1]，https ：//decaresystemsblog.wordpress.com/2006/04/04/spring-20-hiding-services-behind-custom-xml-schema-part-ii/ [2]）给出了一个开发人员的概述。

3 *关于可变/可扩展容器 http://www.xfront.com/VariableContentContainers.pdf[1]， http://www.xfront.com/ExtensibleContentModels.pdf[2]的有用论文
